# nodex

./: .gitignore  .gitmodules  .tokeignore  Cargo.toml  README.md  binding.gyp  build.rs  demo.js  demo.sh  func.js  func.sh  package.json
.github/workflows/: ci.yml
crates/api/: Cargo.toml  build.rs
crates/api/src/: env.rs  lib.rs
crates/api/src/value/: mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/nodex/: Cargo.toml
crates/nodex-api/: Cargo.toml  build.rs
crates/nodex-api/src/: api.rs  api_impl.rs  args.rs  callback.rs  context.rs  descriptor.rs  env.rs  error.rs  handle.rs  lib.rs  mac.rs  reference.rs  rt.rs  tsfn.rs  work.rs
crates/nodex-api/src/scope/: callback.rs  handle.rs  mod.rs
crates/nodex-api/src/value/: array.rs  arraybuffer.rs  bigint.rs  boolean.rs  buffer.rs  class.rs  dataview.rs  date.rs  error.rs  external.rs  function.rs  global.rs  mod.rs  null.rs  number.rs  object.rs  promise.rs  string.rs  symbol.rs  typedarray.rs  undefined.rs
crates/nodex-api/src/value/name/: mod.rs  string.rs  symbol.rs
crates/nodex/src/: lib.rs
examples/: demo.js  demo.sh  descriptor.js  element.js  func.js  plugin.js  promise.js  script.js  tsfn.js
examples/demo/: Cargo.toml
examples/demo/src/: lib.rs
examples/descriptor/: Cargo.toml
examples/descriptor/src/: lib.rs
examples/element/: Cargo.toml
examples/element/src/: lib.rs
examples/func/: Cargo.toml
examples/func/src/: lib.rs
examples/plugin/: Cargo.toml
examples/plugin/src/: lib.rs
examples/promise/: Cargo.toml
examples/promise/src/: lib.rs
examples/script/: Cargo.toml
examples/script/src/: lib.rs
examples/tsfn/: Cargo.toml
examples/tsfn/src/: lib.rs
macros/src/: lib.rs
module/: binding.gyp  package-lock.json
module/lib/: binding.ts
module/src/: api_rs.cc
module/test/: test_binding.js
plugins/: README.md
plugins/nodex-plugin-helloworld/: Cargo.toml  README.md
plugins/nodex-plugin-helloworld/src/: lib.rs
plugins/sled-nodex/: Cargo.toml  dev.sh  index.js
plugins/sled-nodex/src/: db.rs  lib.rs
src/: api.cc  lib.rs
