[workspace]
members = [
  "crates/nodex",
  "crates/nodex-api",
  "crates/macros",
  "crates/cli",

  # examples
  "examples/demo",
  "examples/func",
  "examples/promise",
  "examples/tsfn",
  "examples/script",
]

[patch.crates-io]
nodex = { path = "./crates/nodex" }
nodex-macros = { path = "./crates/macros" }
nodex-api = { path = "./crates/nodex-api" }
