[package]
name = "cargo-nodex"
version = "0.1.0-alpha.0"
edition = "2021"
repository = "https://github.com/uuhan/nodex"
homepage = "https://github.com/uuhan/nodex"
license = "MIT"
authors = ["uuhan <xuminhui189@gmail.com>"]
description = "cargo tool for creating nodejs native addon."

[dependencies]
