[package]
name = "node-api-macros"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/uuhan/node-api-rs"
homepage = "https://github.com/uuhan/node-api-rs"
license = "MIT"
description = "useful macros for node-api-rs"
authors = ["uuhan <xuminhui189@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
darling = "0.13"
heck = "0.4"
