[package]
name = "nodex-macros"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/uuhan/nodex"
homepage = "https://github.com/uuhan/nodex"
license = "MIT"
description = "nodex macros"
authors = ["uuhan <xuminhui189@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
darling = "0.13"
heck = "0.4"
