[package]
name = "nodex-macros"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/uuhan/nodex"
homepage = "https://github.com/uuhan/nodex"
license = "MIT"
description = "nodex macros"
authors = ["uuhan <xuminhui189@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
darling = "0.20"
heck = "0.4"
