[package]
name = "nodex-api"
version = "0.2.4"
edition = "2021"
readme = "../../README.md"
repository = "https://github.com/uuhan/nodex"
homepage = "https://github.com/uuhan/nodex"
license = "MIT"
authors = ["uuhan <xuminhui189@gmail.com>"]
description = "rust binding to node_api.h"
include = ["src/**/*", "api/include/*", "Cargo.toml", "build.rs", "lib/*"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitflags = "2.4"
log = "^0.4"
thiserror = "1.0"

# [dependencies.nodex-macros]
# version = "0"

[build-dependencies]
bindgen = { version = "0.69", optional = true }
cc = { version = "1.0.72", optional = true }
fs_extra = "1.3"

[features]
default = ["v1"]
gen-api = ["bindgen", "cc"]
v1 = []
v2 = ["v1"]
v3 = ["v1", "v2"]
v4 = ["v1", "v2", "v3"]
v5 = ["v1", "v2", "v3", "v4"]
v6 = ["v1", "v2", "v3", "v4", "v5"]
v7 = ["v1", "v2", "v3", "v4", "v5", "v6"]
v8 = ["v1", "v2", "v3", "v4", "v5", "v6", "v7"]

[package.metadata.docs.rs]
features = ["v8"]
